kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: support
  labels:
    app.kubernetes.io/part-of: support-automation
